dotCMS/core#16246 Make nav icons 18x18 and overflow hidden to prevent bad icon entries (#990)

--- a/src/app/view/components/dot-navigation/components/dot-nav-icon/dot-nav-icon.component.scss
+++ b/src/app/view/components/dot-navigation/components/dot-nav-icon/dot-nav-icon.component.scss
@@ -1,3 +1,8 @@
-.fa {
-    margin-left: 4px;
+:host {
+    display: flex;
+    align-items: center;
+    height: 18px;
+    justify-content: center;
+    overflow: hidden;
+    width: 18px;
 }
